deploy: julianbrooks/comp2850-hci-mdbook@34b5df9f55c3e82d11438e604d67d750fecdf186

--- a/404.html
+++ b/404.html
@@ -184,12 +184,12 @@
 <p><img src="https://img.shields.io/badge/COMP2850-HCI-blue" alt="COMP2850" />
 <img src="https://img.shields.io/badge/Status-404-red" alt="404" /></p>
 <hr />
-<h2 id="oops-that-page-doesnt-exist"><a class="header" href="#oops-that-page-doesnt-exist">Oops! That page doesn't exist</a></h2>
-<p>The page you're looking for might have been moved, renamed, or doesn't exist.</p>
+<h2 id="oops-that-page-doesnt-exist"><a class="header" href="#oops-that-page-doesnt-exist">Oops! That page doesn’t exist</a></h2>
+<p>The page you’re looking for might have been moved, renamed, or doesn’t exist.</p>
 <h3 id="what-you-can-do"><a class="header" href="#what-you-can-do">What you can do</a></h3>
 <ul>
 <li><strong>Go to the <a href="index.html">Home page</a></strong> to start from the beginning</li>
-<li><strong>Check the <a href="SUMMARY.html">Table of Contents</a></strong> to find what you're looking for</li>
+<li><strong>Check the <a href="SUMMARY.html">Table of Contents</a></strong> to find what you’re looking for</li>
 <li><strong>Search</strong> using the search box at the top of the page</li>
 <li><strong>Contact the teaching team</strong> if you think this is an error</li>
 </ul>
