--- a/assessment/marking-rubric.html
+++ b/assessment/marking-rubric.html
@@ -220,7 +220,7 @@
 <li>✅ Adequate qualitative data (pilot notes present, some quotes)</li>
 <li>✅ Most findings have evidence chains (1-2 minor gaps)</li>
 <li>✅ No PII violations</li>
-<li>⚠️ Evidence chains occasionally vague ("some participants struggled" without specifics)</li>
+<li>⚠️ Evidence chains occasionally vague (“some participants struggled” without specifics)</li>
 </ul>
 <h4 id="satisfactory-15-17-marks"><a class="header" href="#satisfactory-15-17-marks">Satisfactory (15-17 marks)</a></h4>
 <ul>
@@ -228,7 +228,7 @@
 <li>⚠️ Thin qualitative data (pilot notes brief, few quotes)</li>
 <li>⚠️ Evidence chains incomplete (findings asserted without clear data links)</li>
 <li>✅ No PII violations</li>
-<li>⚠️ Data sources sometimes contradict (metrics say 100% completion, notes say "struggled")</li>
+<li>⚠️ Data sources sometimes contradict (metrics say 100% completion, notes say “struggled”)</li>
 </ul>
 <h4 id="needs-work-12-14-marks"><a class="header" href="#needs-work-12-14-marks">Needs Work (12-14 marks)</a></h4>
 <ul>
@@ -308,8 +308,8 @@
 <ul>
 <li>⚠️ Quantitative analysis basic (completion rates calculated, but no MAD/median)</li>
 <li>⚠️ Qualitative synthesis superficial (lists issues without patterns)</li>
-<li>⚠️ WCAG references generic ("accessibility issues" not specific criteria)</li>
-<li>⚠️ Inclusion impact vague ("helps disabled people")</li>
+<li>⚠️ WCAG references generic (“accessibility issues” not specific criteria)</li>
+<li>⚠️ Inclusion impact vague (“helps disabled people”)</li>
 <li>⚠️ Prioritisation arbitrary (no formula, unclear rationale)</li>
 <li>❌ Limitations not discussed</li>
 </ul>
@@ -353,7 +353,7 @@
 <li>✅ Reporting mostly honest</li>
 <li>⚠️ 1 file missing or incomplete</li>
 <li>⚠️ Spelling/grammar errors present</li>
-<li>⚠️ Formatting issues (some tables don't render)</li>
+<li>⚠️ Formatting issues (some tables don’t render)</li>
 <li>⚠️ Evidence somewhat disorganised</li>
 </ul>
 <h4 id="needs-work-8-9-marks"><a class="header" href="#needs-work-8-9-marks">Needs Work (8-9 marks)</a></h4>
@@ -436,7 +436,7 @@
 </ul>
 <h4 id="fail-0-11-marks-1"><a class="header" href="#fail-0-11-marks-1">Fail (0-11 marks)</a></h4>
 <ul>
-<li>❌ Fixes don't work or introduce major accessibility issues</li>
+<li>❌ Fixes don’t work or introduce major accessibility issues</li>
 <li>❌ No regression testing performed</li>
 <li>❌ No-JS completely broken</li>
 <li>❌ Academic integrity issues (fixes copied without understanding)</li>
@@ -446,7 +446,7 @@
 <h4 id="excellent-15-20-marks-2"><a class="header" href="#excellent-15-20-marks-2">Excellent (15-20 marks)</a></h4>
 <ul>
 <li>✅ Systemic barriers identified (beyond individual inconvenience: employment, education, civic participation)</li>
-<li>✅ Exclusion patterns analysed (who is excluded, how, why—not just "disabled people")</li>
+<li>✅ Exclusion patterns analysed (who is excluded, how, why—not just “disabled people”)</li>
 <li>✅ Universal design distinguished from accommodation (fix benefits all users, not just workaround)</li>
 <li>✅ Ethical considerations addressed (privacy, autonomy, dignity)</li>
 <li>✅ Long-term implications discussed (if pattern adopted widely, societal change)</li>
@@ -464,7 +464,7 @@
 <h4 id="satisfactory-10-11-marks-2"><a class="header" href="#satisfactory-10-11-marks-2">Satisfactory (10-11 marks)</a></h4>
 <ul>
 <li>⚠️ Barriers mentioned but not systemic (individual inconvenience)</li>
-<li>⚠️ Exclusion generic ("disabled people" without specifics)</li>
+<li>⚠️ Exclusion generic (“disabled people” without specifics)</li>
 <li>❌ No distinction between universal design and accommodation</li>
 <li>❌ Ethics not discussed</li>
 <li>❌ No long-term analysis</li>
@@ -472,7 +472,7 @@
 </ul>
 <h4 id="needs-work-8-9-marks-1"><a class="header" href="#needs-work-8-9-marks-1">Needs Work (8-9 marks)</a></h4>
 <ul>
-<li>❌ Superficial ("helps disabled people" without analysis)</li>
+<li>❌ Superficial (“helps disabled people” without analysis)</li>
 <li>❌ No systemic thinking</li>
 <li>❌ &lt;150 words or missing</li>
 </ul>
@@ -519,7 +519,7 @@
 <h4 id="excellent-8-10-marks"><a class="header" href="#excellent-8-10-marks">Excellent (8-10 marks)</a></h4>
 <ul>
 <li>✅ Clear, well-structured documentation (all 6 files + directories)</li>
-<li>✅ Honest reporting (if metrics didn't improve, explains why)</li>
+<li>✅ Honest reporting (if metrics didn’t improve, explains why)</li>
 <li>✅ Complete submission (matches specification exactly)</li>
 <li>✅ UK spelling and grammar</li>
 <li>✅ Proper Markdown formatting</li>
@@ -561,15 +561,15 @@
 <p>⚠️ <strong>Significant plagiarism</strong> (substantial sections copied, inadequate attribution)</p>
 <hr />
 <h2 id="common-misconceptions"><a class="header" href="#common-misconceptions">Common Misconceptions</a></h2>
-<h3 id="-i-need-perfect-code-to-get-high-marks"><a class="header" href="#-i-need-perfect-code-to-get-high-marks">❌ "I need perfect code to get high marks"</a></h3>
-<p><strong>No</strong>. We don't mark code quality. We mark <strong>HCI process</strong>. You can have bugs in your app and still get Excellent if your evaluation/redesign method is rigorous.</p>
-<h3 id="-i-need-to-write-3000-words-to-get-good-marks"><a class="header" href="#-i-need-to-write-3000-words-to-get-good-marks">❌ "I need to write 3000 words to get good marks"</a></h3>
+<h3 id="-i-need-perfect-code-to-get-high-marks"><a class="header" href="#-i-need-perfect-code-to-get-high-marks">❌ “I need perfect code to get high marks”</a></h3>
+<p><strong>No</strong>. We don’t mark code quality. We mark <strong>HCI process</strong>. You can have bugs in your app and still get Excellent if your evaluation/redesign method is rigorous.</p>
+<h3 id="-i-need-to-write-3000-words-to-get-good-marks"><a class="header" href="#-i-need-to-write-3000-words-to-get-good-marks">❌ “I need to write 3000 words to get good marks”</a></h3>
 <p><strong>No</strong>. We prefer <strong>concise tables and metrics over verbose prose</strong>. A 1200-word findings doc with strong evidence beats a 3000-word essay with weak data.</p>
-<h3 id="-if-my-redesign-doesnt-improve-metrics-ill-fail"><a class="header" href="#-if-my-redesign-doesnt-improve-metrics-ill-fail">❌ "If my redesign doesn't improve metrics, I'll fail"</a></h3>
-<p><strong>No</strong>. We mark <strong>honest analysis</strong>. If metrics don't improve, explain why (small n? wrong fix? need more iteration?). Shows LO12 (professionalism).</p>
-<h3 id="-i-need-to-fix-all-issues-found-in-task-1"><a class="header" href="#-i-need-to-fix-all-issues-found-in-task-1">❌ "I need to fix all issues found in Task 1"</a></h3>
+<h3 id="-if-my-redesign-doesnt-improve-metrics-ill-fail"><a class="header" href="#-if-my-redesign-doesnt-improve-metrics-ill-fail">❌ “If my redesign doesn’t improve metrics, I’ll fail”</a></h3>
+<p><strong>No</strong>. We mark <strong>honest analysis</strong>. If metrics don’t improve, explain why (small n? wrong fix? need more iteration?). Shows LO12 (professionalism).</p>
+<h3 id="-i-need-to-fix-all-issues-found-in-task-1"><a class="header" href="#-i-need-to-fix-all-issues-found-in-task-1">❌ “I need to fix all issues found in Task 1”</a></h3>
 <p><strong>No</strong>. We mark <strong>prioritisation and thoroughness</strong>. 2 fixes done rigorously (WCAG verified, regression tested, re-piloted) beats 10 fixes done superficially.</p>
-<h3 id="-i-cant-get-excellent-if-i-find-problems-in-my-work"><a class="header" href="#-i-cant-get-excellent-if-i-find-problems-in-my-work">❌ "I can't get Excellent if I find problems in my work"</a></h3>
+<h3 id="-i-cant-get-excellent-if-i-find-problems-in-my-work"><a class="header" href="#-i-cant-get-excellent-if-i-find-problems-in-my-work">❌ “I can’t get Excellent if I find problems in my work”</a></h3>
 <p><strong>No</strong>. <strong>Reporting limitations honestly</strong> is a mark of professionalism (LO12). Hiding problems loses marks; acknowledging them gains marks.</p>
 <hr />
 <h2 id="how-to-self-assess-before-submission"><a class="header" href="#how-to-self-assess-before-submission">How to Self-Assess Before Submission</a></h2>
@@ -609,7 +609,7 @@
 <li><input disabled="" type="checkbox"/>
 <strong>Re-pilots</strong>: n≥2 conducted using same protocol as Task 1?</li>
 <li><input disabled="" type="checkbox"/>
-<strong>Honest</strong>: If metrics didn't improve, explained why?</li>
+<strong>Honest</strong>: If metrics didn’t improve, explained why?</li>
 </ul>
 <hr />
 <h2 id="faqs"><a class="header" href="#faqs">FAQs</a></h2>
@@ -618,11 +618,11 @@ A: Minimum 4 required. Start earlier, use lab sessions to find peers. n=3 loses 
 <p><strong>Q: Can I use mean instead of median?</strong>
 A: Median is more robust (less affected by outliers). Using mean is acceptable but justify why.</p>
 <p><strong>Q: What if my regression testing finds new issues?</strong>
-A: Fix them before re-pilots. That's why regression testing exists. Document in notes.</p>
+A: Fix them before re-pilots. That’s why regression testing exists. Document in notes.</p>
 <p><strong>Q: Do I need to implement screen reader fixes?</strong>
 A: Not mandatory, but WCAG violations affecting SR users are high inclusion impact (prioritise these).</p>
 <p><strong>Q: What if my fix breaks no-JS parity?</strong>
-A: That's a fail in Fix Effectiveness. Test traditional path after every change.</p>
+A: That’s a fail in Fix Effectiveness. Test traditional path after every change.</p>
 <p><strong>Q: Can I get Excellent without Task 1→Task 2 evidence chains?</strong>
 A: No. Evidence chains are core to Evidence Chains criterion (20 marks). Every fix must link to Task 1 finding.</p>
 <p><strong>Q: How detailed should code diffs be?</strong>
@@ -634,7 +634,7 @@ A: Unlikely if you tested with axe DevTools + keyboard + SR. Revisit Week 7 audi
 <p>✅ <strong>Evidence trails</strong>: Every claim traceable to data
 ✅ <strong>Method rigour</strong>: Consent, variants, systematic testing
 ✅ <strong>WCAG knowledge</strong>: Specific criteria cited, compliance verified
-✅ <strong>Critical thinking</strong>: Systemic barriers analysed, not just "helps disabled people"
+✅ <strong>Critical thinking</strong>: Systemic barriers analysed, not just “helps disabled people”
 ✅ <strong>Honest reporting</strong>: Limitations acknowledged, problems not hidden
 ✅ <strong>Process over product</strong>: Evaluation/redesign method matters, not code elegance</p>
 <p><strong>Focus on demonstrating HCI competence, not software engineering mastery.</strong></p>
