--- a/assessment/overview.html
+++ b/assessment/overview.html
@@ -184,7 +184,7 @@
 <img src="https://img.shields.io/badge/Weighting-See_Minerva-blue" alt="Weighting" /></p>
 <hr />
 <h2 id="introduction"><a class="header" href="#introduction">Introduction</a></h2>
-<p>The HCI assessment evaluates your ability to <strong>design, evaluate, and improve accessible web interfaces</strong> using evidence-based methods. You'll demonstrate mastery of all <strong>13 HCI Learning Outcomes</strong> through two interconnected tasks.</p>
+<p>The HCI assessment evaluates your ability to <strong>design, evaluate, and improve accessible web interfaces</strong> using evidence-based methods. You’ll demonstrate mastery of all <strong>13 HCI Learning Outcomes</strong> through two interconnected tasks.</p>
 <p><strong>Assessment philosophy</strong>:</p>
 <ul>
 <li><strong>Evidence-based</strong>: Every claim backed by data (metrics, quotes, screenshots, WCAG audits)</li>
@@ -221,7 +221,7 @@
 <p><strong>Launch</strong>: Week 8 Lab 2 (end of session)
 <strong>Work period</strong>: Weeks 8-9 (2 weeks)
 <strong>Submission deadline</strong>: <strong>Week 9 Lab 2</strong> (Gradescope)</p>
-<p><strong>What you'll do</strong>:</p>
+<p><strong>What you’ll do</strong>:</p>
 <ul>
 <li><strong>Week 8 Lab 2</strong>: Draft evaluation plan, define tasks, write protocol</li>
 <li><strong>Week 9 Lab 1</strong>: Learn instrumentation, finalize protocol</li>
@@ -239,7 +239,7 @@
 <p><strong>Launch</strong>: Week 10 Lab 1
 <strong>Work period</strong>: Weeks 10-11 (2 weeks)
 <strong>Submission deadline</strong>: <strong>Week 11 Lab 2</strong> (Gradescope)</p>
-<p><strong>What you'll do</strong>:</p>
+<p><strong>What you’ll do</strong>:</p>
 <ul>
 <li><strong>Week 10 Lab 1</strong>: Analyse Task 1 data, prioritise fixes, write redesign brief</li>
 <li><strong>Week 10 Lab 2</strong>: Implement fixes, regression testing, re-pilots</li>
@@ -345,14 +345,14 @@
 <h2 id="common-mistakes-to-avoid"><a class="header" href="#common-mistakes-to-avoid">Common Mistakes to Avoid</a></h2>
 <h3 id="task-1"><a class="header" href="#task-1">Task 1</a></h3>
 <p>❌ <strong>Fabricated data</strong>: Markers can spot fake metrics (too perfect, unrealistic patterns)
-❌ <strong>No evidence chains</strong>: Claims without data (e.g., "SR users struggled" with no pilot notes)
+❌ <strong>No evidence chains</strong>: Claims without data (e.g., “SR users struggled” with no pilot notes)
 ❌ <strong>PII leaks</strong>: Screenshots with names, session IDs that reveal identities
 ❌ <strong>Incomplete pilots</strong>: Only 2 participants instead of minimum 4
 ❌ <strong>Missing consent</strong>: No documentation of ethical protocol</p>
 <h3 id="task-2"><a class="header" href="#task-2">Task 2</a></h3>
-<p>❌ <strong>No before/after data</strong>: Can't prove improvement without metrics comparison
-❌ <strong>Regression not tested</strong>: Fix broke something else but wasn't caught
-❌ <strong>Superficial societal impact</strong>: Just saying "helps disabled people" without systemic analysis
+<p>❌ <strong>No before/after data</strong>: Can’t prove improvement without metrics comparison
+❌ <strong>Regression not tested</strong>: Fix broke something else but wasn’t caught
+❌ <strong>Superficial societal impact</strong>: Just saying “helps disabled people” without systemic analysis
 ❌ <strong>WCAG violations remain</strong>: Claimed compliance but axe DevTools still shows errors
 ❌ <strong>No-JS parity broken</strong>: Fix works with JS but breaks traditional path</p>
 <hr />
@@ -365,12 +365,12 @@
 ✅ <strong>Document honestly</strong>: Markers value honest reporting over perfect results</p>
 <h3 id="task-1-specific"><a class="header" href="#task-1-specific">Task 1 Specific</a></h3>
 <p>✅ <strong>Pilot with diverse participants</strong>: At least 1 keyboard-only, 1 no-JS variant
-✅ <strong>Record immediately</strong>: Don't rely on memory—take notes during pilots
+✅ <strong>Record immediately</strong>: Don’t rely on memory—take notes during pilots
 ✅ <strong>Check metrics.csv</strong>: Verify data complete before leaving lab
 ✅ <strong>Scrub screenshots</strong>: Crop/blur before including in submission</p>
 <h3 id="task-2-specific"><a class="header" href="#task-2-specific">Task 2 Specific</a></h3>
-<p>✅ <strong>Prioritise ruthlessly</strong>: Can't fix everything—focus on high inclusion impact
-✅ <strong>Test before re-pilots</strong>: Don't waste participants on broken fixes
+<p>✅ <strong>Prioritise ruthlessly</strong>: Can’t fix everything—focus on high inclusion impact
+✅ <strong>Test before re-pilots</strong>: Don’t waste participants on broken fixes
 ✅ <strong>Use Analyse.kt script</strong>: Automated stats more reliable than manual calculation
 ✅ <strong>Compare like-with-like</strong>: Same tasks, same protocol for before/after</p>
 <hr />
@@ -384,17 +384,17 @@
 <h2 id="faqs"><a class="header" href="#faqs">FAQs</a></h2>
 <p><strong>Q: Can I work in a group?</strong>
 A: No. Assessment is individual. You can pilot with peers but analysis/documentation must be your own.</p>
-<p><strong>Q: What if I can't recruit 4 participants?</strong>
+<p><strong>Q: What if I can’t recruit 4 participants?</strong>
 A: Minimum 4 required. Start recruiting early (Week 8). Use lab sessions to find peers.</p>
 <p><strong>Q: Can I use my Week 6-7 work for Task 1?</strong>
-A: Yes! Reference Week 6 job stories, Week 7 WCAG audit. That's the evidence trail.</p>
+A: Yes! Reference Week 6 job stories, Week 7 WCAG audit. That’s the evidence trail.</p>
 <p><strong>Q: Do I need to fix all issues found in Task 1?</strong>
 A: No. Prioritise top 2-3 issues using (Impact + Inclusion) – Effort. Quality over quantity.</p>
-<p><strong>Q: What if my redesign doesn't improve metrics?</strong>
+<p><strong>Q: What if my redesign doesn’t improve metrics?</strong>
 A: Document honestly. Analyse why (small n? wrong fix? need more iteration?). Shows LO12 (professionalism).</p>
 <p><strong>Q: Can I submit early?</strong>
 A: Yes, but you lose studio crit feedback (Week 11 Lab 1). Consider using full timeline.</p>
-<p><strong>Q: What's the word limit?</strong>
+<p><strong>Q: What’s the word limit?</strong>
 A: No strict limit. Be concise. Findings doc typically 2000-3000 words, redesign brief 1500-2500.</p>
 <hr />
 <h2 id="quick-links"><a class="header" href="#quick-links">Quick Links</a></h2>
@@ -413,7 +413,7 @@ A: No strict limit. Be concise. Findings doc typically 2000-3000 words, redesign
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../resources/code-resources.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../wk11/wk11-lab2-student-guide.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
@@ -427,7 +427,7 @@ A: No strict limit. Be concise. Findings doc typically 2000-3000 words, redesign
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../resources/code-resources.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../wk11/wk11-lab2-student-guide.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
