--- a/assessment/task1.html
+++ b/assessment/task1.html
@@ -186,7 +186,7 @@
 <hr />
 <h2 id="overview"><a class="header" href="#overview">Overview</a></h2>
 <p>Design and execute a <strong>task-based usability evaluation</strong> with peer pilots (n=4 minimum), collecting quantitative metrics and qualitative observations to identify accessibility and usability issues in your HCI implementation.</p>
-<p><strong>What you'll learn</strong>:</p>
+<p><strong>What you’ll learn</strong>:</p>
 <ul>
 <li>How to design rigorous evaluation protocols</li>
 <li>How to collect privacy-safe metrics using server-side instrumentation</li>
@@ -194,7 +194,7 @@
 <li>How to create evidence chains linking data to design decisions</li>
 </ul>
 <hr />
-<h2 id="what-were-assessing"><a class="header" href="#what-were-assessing">What We're Assessing</a></h2>
+<h2 id="what-were-assessing"><a class="header" href="#what-were-assessing">What We’re Assessing</a></h2>
 <h3 id="-what-this-task-does-assess"><a class="header" href="#-what-this-task-does-assess">✅ What This Task DOES Assess</a></h3>
 <p><strong>HCI process competence</strong> (LO8):</p>
 <ul>
@@ -216,11 +216,11 @@
 <li>Can you integrate HCI methods with software engineering (server-side instrumentation)?</li>
 </ul>
 <h3 id="-what-this-task-does-not-assess"><a class="header" href="#-what-this-task-does-not-assess">❌ What This Task Does NOT Assess</a></h3>
-<p><strong>Code quality</strong>: We're not grading your Week 6-8 implementation (that's already built). We assess your <strong>evaluation method</strong>, not your coding skills.</p>
-<p><strong>Kotlin/Ktor proficiency</strong>: That's OOP (Weeks 1-5). We assess <strong>HCI methods</strong> (protocol design, pilots, analysis).</p>
-<p><strong>Writing quality</strong>: Beyond basic clarity, we don't mark prose style. <strong>Tables, metrics, and evidence chains</strong> matter more than eloquent paragraphs.</p>
-<p><strong>Feature completeness</strong>: We don't care if your app is "finished". We care if you can <strong>evaluate what exists</strong> using rigorous methods.</p>
-<p><strong>Perfect results</strong>: We don't expect zero issues found. We expect <strong>honest reporting</strong> and <strong>traceable evidence</strong>.</p>
+<p><strong>Code quality</strong>: We’re not grading your Week 6-8 implementation (that’s already built). We assess your <strong>evaluation method</strong>, not your coding skills.</p>
+<p><strong>Kotlin/Ktor proficiency</strong>: That’s OOP (Weeks 1-5). We assess <strong>HCI methods</strong> (protocol design, pilots, analysis).</p>
+<p><strong>Writing quality</strong>: Beyond basic clarity, we don’t mark prose style. <strong>Tables, metrics, and evidence chains</strong> matter more than eloquent paragraphs.</p>
+<p><strong>Feature completeness</strong>: We don’t care if your app is “finished”. We care if you can <strong>evaluate what exists</strong> using rigorous methods.</p>
+<p><strong>Perfect results</strong>: We don’t expect zero issues found. We expect <strong>honest reporting</strong> and <strong>traceable evidence</strong>.</p>
 <hr />
 <h2 id="timeline"><a class="header" href="#timeline">Timeline</a></h2>
 <div class="table-wrapper"><table><thead><tr><th>When</th><th>Activity</th><th>Deliverable</th></tr></thead><tbody>
@@ -245,7 +245,7 @@
 </div>
 <p>See <a href="../references/learning-outcomes.html">Learning Outcomes Reference</a> for full definitions.</p>
 <hr />
-<h2 id="what-youre-evaluating"><a class="header" href="#what-youre-evaluating">What You're Evaluating</a></h2>
+<h2 id="what-youre-evaluating"><a class="header" href="#what-youre-evaluating">What You’re Evaluating</a></h2>
 <p><strong>Your own HCI implementation</strong> built during Weeks 6-8:</p>
 <ul>
 <li>Task management interface (CRUD operations)</li>
@@ -260,7 +260,7 @@
 <p>Submit <strong>6 files + evidence directory</strong> to Gradescope by <strong>Week 9 Lab 2 deadline</strong>:</p>
 <h3 id="required-files"><a class="header" href="#required-files">Required Files</a></h3>
 <h4 id="1-01-evaluation-planmd"><a class="header" href="#1-01-evaluation-planmd">1. <code>01-evaluation-plan.md</code></a></h4>
-<p><strong>What it is</strong>: High-level plan explaining what you're evaluating, why, and how.</p>
+<p><strong>What it is</strong>: High-level plan explaining what you’re evaluating, why, and how.</p>
 <p><strong>Key sections</strong>:</p>
 <ul>
 <li>Evaluation objectives (design questions you need answered)</li>
@@ -276,7 +276,7 @@
 <p><strong>Template</strong>: <a href="../../wk09/lab-wk9/submission/task1-draft/01-evaluation-plan.html">wk09/lab-wk9/submission/task1-draft/01-evaluation-plan.md</a></p>
 <p><strong>Example connection to needs-finding</strong> (see <a href="#worked-example-linking-needs-finding-to-evaluation">Worked Example: Linking Needs-Finding to Evaluation</a> below):</p>
 <blockquote>
-<p>"Job story from Week 6: 'When I need to track coursework deadlines, I want to quickly add tasks, so I don't forget important dates' → informed Task 3 (add task) with target time &lt;10 seconds."</p>
+<p>“Job story from Week 6: ‘When I need to track coursework deadlines, I want to quickly add tasks, so I don’t forget important dates’ → informed Task 3 (add task) with target time &lt;10 seconds.”</p>
 </blockquote>
 <hr />
 <h4 id="2-02-protocolmd"><a class="header" href="#2-02-protocolmd">2. <code>02-protocol.md</code></a></h4>
@@ -477,11 +477,11 @@ Task 2 fix: Implement aria-live + aria-describedby + focus management
 <hr />
 <h2 id="common-mistakes-to-avoid"><a class="header" href="#common-mistakes-to-avoid">Common Mistakes to Avoid</a></h2>
 <p>❌ <strong>Fabricated data</strong>: Markers can spot fake metrics (too perfect, unrealistic patterns)</p>
-<p>❌ <strong>No evidence chains</strong>: Saying "SR users struggled" without pilot notes or screenshots</p>
+<p>❌ <strong>No evidence chains</strong>: Saying “SR users struggled” without pilot notes or screenshots</p>
 <p>❌ <strong>PII leaks</strong>: Screenshots with names, session IDs that reveal identities</p>
 <p>❌ <strong>Incomplete pilots</strong>: Only 2-3 participants instead of minimum 4</p>
 <p>❌ <strong>Missing consent</strong>: No documentation of ethical protocol</p>
-<p>❌ <strong>Vague findings</strong>: "Interface needs improvement" vs "Validation errors not announced (WCAG 4.1.3)"</p>
+<p>❌ <strong>Vague findings</strong>: “Interface needs improvement” vs “Validation errors not announced (WCAG 4.1.3)”</p>
 <p>❌ <strong>No link to needs-finding</strong>: Missing LO2 connection to Week 6 job stories</p>
 <p>❌ <strong>Results.csv incomplete</strong>: Missing session IDs, timestamps, or task outcomes</p>
 <hr />
@@ -490,30 +490,30 @@ Task 2 fix: Implement aria-live + aria-describedby + focus management
 <h3 id="example-chain-job-story--task-design--success-criteria"><a class="header" href="#example-chain-job-story--task-design--success-criteria">Example Chain: Job Story → Task Design → Success Criteria</a></h3>
 <h4 id="1-week-6-job-story-from-needs-finding"><a class="header" href="#1-week-6-job-story-from-needs-finding">1. Week 6 Job Story (from Needs-Finding)</a></h4>
 <blockquote>
-<p>"When I'm reviewing my weekly tasks on Sunday evening, I want to see incomplete items highlighted, so I can prioritize tomorrow's work, because I need to meet Friday's deadline."</p>
+<p>“When I’m reviewing my weekly tasks on Sunday evening, I want to see incomplete items highlighted, so I can prioritize tomorrow’s work, because I need to meet Friday’s deadline.”</p>
 </blockquote>
 <p><strong>Context</strong>: Participant prioritises coursework weekly; needs visual distinction between complete/incomplete tasks.</p>
 <hr />
 <h4 id="2-evaluation-task-design-task-1-week-9"><a class="header" href="#2-evaluation-task-design-task-1-week-9">2. Evaluation Task Design (Task 1, Week 9)</a></h4>
 <p>From this job story, you designed <strong>Task 4 (T4): Filter incomplete tasks</strong></p>
-<p><strong>Scenario</strong>: "You have 10 tasks in your list. 4 are complete, 6 are incomplete. You need to review only incomplete tasks."</p>
-<p><strong>Instructions</strong>: "Use the filter to show only incomplete tasks."</p>
+<p><strong>Scenario</strong>: “You have 10 tasks in your list. 4 are complete, 6 are incomplete. You need to review only incomplete tasks.”</p>
+<p><strong>Instructions</strong>: “Use the filter to show only incomplete tasks.”</p>
 <p><strong>Success criteria</strong>:</p>
 <ul>
 <li>Filter applied successfully</li>
 <li>Only incomplete tasks visible (n=6)</li>
-<li>Screen reader announces result count ("Showing 6 of 10 tasks")</li>
+<li>Screen reader announces result count (“Showing 6 of 10 tasks”)</li>
 </ul>
-<p><strong>Expected duration</strong>: Target &lt; 8 seconds (job story context: "Sunday evening" = time-pressured)</p>
+<p><strong>Expected duration</strong>: Target &lt; 8 seconds (job story context: “Sunday evening” = time-pressured)</p>
 <hr />
 <h4 id="3-link-in-evaluation-plan-01-evaluation-planmd"><a class="header" href="#3-link-in-evaluation-plan-01-evaluation-planmd">3. Link in Evaluation Plan (01-evaluation-plan.md)</a></h4>
-<p>In your evaluation plan, Section 2 ("Link to Needs-Finding"), you write:</p>
+<p>In your evaluation plan, Section 2 (“Link to Needs-Finding”), you write:</p>
 <blockquote>
-<p><strong>Job Story JS3</strong> (from Week 6 participant P2): "When I'm reviewing my weekly tasks on Sunday evening, I want to see incomplete items highlighted, so I can prioritize tomorrow's work, because I need to meet Friday's deadline."</p>
+<p><strong>Job Story JS3</strong> (from Week 6 participant P2): “When I’m reviewing my weekly tasks on Sunday evening, I want to see incomplete items highlighted, so I can prioritize tomorrow’s work, because I need to meet Friday’s deadline.”</p>
 <p><strong>Informed design of Task 4 (Filter incomplete tasks)</strong>:</p>
 <ul>
 <li><strong>Time target</strong> (&lt; 8 seconds): Job story context indicates time pressure (Sunday evening review before Monday deadlines).</li>
-<li><strong>Result count announcement</strong>: Job story participant mentioned needing to "see" distinction → interpreted as need for both visual and auditory feedback (WCAG 1.3.1).</li>
+<li><strong>Result count announcement</strong>: Job story participant mentioned needing to “see” distinction → interpreted as need for both visual and auditory feedback (WCAG 1.3.1).</li>
 <li><strong>Success metric</strong>: Completion rate &gt; 90%, median time &lt; 8s, screen reader result announcement verified.</li>
 </ul>
 </blockquote>
@@ -521,31 +521,31 @@ Task 2 fix: Implement aria-live + aria-describedby + focus management
 <h4 id="4-evidence-in-findings-05-findingsmd"><a class="header" href="#4-evidence-in-findings-05-findingsmd">4. Evidence in Findings (05-findings.md)</a></h4>
 <p>After running pilots, you analyse T4 data:</p>
 <blockquote>
-<p><strong>Finding F4</strong>: Filter feature (T4) achieved 100% completion rate (5/5 participants) with median time 6.2s (MAD: 1.1s), exceeding target (&lt; 8s). However, 1/2 screen reader participants reported confusion about result count format ("Showing 6 of 10" read as "Showing six of ten" without context). Links to <strong>JS3</strong> (Week 6): need for clear prioritisation feedback.</p>
+<p><strong>Finding F4</strong>: Filter feature (T4) achieved 100% completion rate (5/5 participants) with median time 6.2s (MAD: 1.1s), exceeding target (&lt; 8s). However, 1/2 screen reader participants reported confusion about result count format (“Showing 6 of 10” read as “Showing six of ten” without context). Links to <strong>JS3</strong> (Week 6): need for clear prioritisation feedback.</p>
 </blockquote>
 <hr />
 <h3 id="what-this-demonstrates-lo2"><a class="header" href="#what-this-demonstrates-lo2">What This Demonstrates (LO2)</a></h3>
 <p>✅ <strong>Needs-finding informed task selection</strong>: Job story → evaluation task
-✅ <strong>Measurable targets derived from context</strong>: "Sunday evening" time pressure → &lt; 8s target
-✅ <strong>Accessibility considerations traced</strong>: "see highlighted" → visual + auditory feedback
+✅ <strong>Measurable targets derived from context</strong>: “Sunday evening” time pressure → &lt; 8s target
+✅ <strong>Accessibility considerations traced</strong>: “see highlighted” → visual + auditory feedback
 ✅ <strong>Evidence chain complete</strong>: Job story → task design → pilot data → finding</p>
 <h3 id="common-mistakes"><a class="header" href="#common-mistakes">Common Mistakes</a></h3>
-<p>❌ <strong>Vague link</strong>: "Job stories informed my tasks" (no specifics)
-❌ <strong>Post-hoc fabrication</strong>: Claiming link to job story that doesn't match task design
+<p>❌ <strong>Vague link</strong>: “Job stories informed my tasks” (no specifics)
+❌ <strong>Post-hoc fabrication</strong>: Claiming link to job story that doesn’t match task design
 ❌ <strong>Missing context</strong>: Citing job story without explaining <em>how</em> it shaped task parameters</p>
 <hr />
 <h2 id="tips-for-success"><a class="header" href="#tips-for-success">Tips for Success</a></h2>
 <h3 id="planning-week-8-lab-2"><a class="header" href="#planning-week-8-lab-2">Planning (Week 8 Lab 2)</a></h3>
 <p>✅ <strong>Draft tasks early</strong>: Define 4-5 realistic tasks based on features you built</p>
-<p>✅ <strong>Set measurable targets</strong>: "&lt; 15 seconds" not "fast"</p>
+<p>✅ <strong>Set measurable targets</strong>: “&lt; 15 seconds” not “fast”</p>
 <p>✅ <strong>Link to Week 6</strong>: Show how job stories informed task design (LO2)</p>
 <p>✅ <strong>Test your protocol</strong>: Do a dry run before Week 9 pilots</p>
 <hr />
 <h3 id="execution-week-9-lab-1-2"><a class="header" href="#execution-week-9-lab-1-2">Execution (Week 9 Lab 1-2)</a></h3>
 <p>✅ <strong>Instrument carefully</strong>: Test <code>Logger.kt</code> before pilots—verify CSV writes correctly</p>
-<p>✅ <strong>Recruit early</strong>: Don't wait until Week 9 Lab 2 to find participants</p>
+<p>✅ <strong>Recruit early</strong>: Don’t wait until Week 9 Lab 2 to find participants</p>
 <p>✅ <strong>Pilot diverse variants</strong>: At least 1 keyboard-only, 1 no-JS</p>
-<p>✅ <strong>Take notes immediately</strong>: Don't rely on memory—capture quotes during session</p>
+<p>✅ <strong>Take notes immediately</strong>: Don’t rely on memory—capture quotes during session</p>
 <p>✅ <strong>Check data completeness</strong>: Before participants leave, verify <code>metrics.csv</code> has their data</p>
 <hr />
 <h3 id="analysis--documentation-week-9-lab-2"><a class="header" href="#analysis--documentation-week-9-lab-2">Analysis &amp; Documentation (Week 9 Lab 2)</a></h3>
@@ -557,17 +557,17 @@ Task 2 fix: Implement aria-live + aria-describedby + focus management
 <hr />
 <h2 id="faqs"><a class="header" href="#faqs">FAQs</a></h2>
 <p><strong>Q: Can I use fewer than 4 participants?</strong>
-A: No. Minimum 4 required for identifying patterns. Nielsen's 5-user rule suggests 5 find ~85% of issues.</p>
-<p><strong>Q: What if participants don't give consent?</strong>
-A: Don't proceed with the pilot. Find alternative participants. Consent is non-negotiable.</p>
-<p><strong>Q: Can I fabricate data if I couldn't complete pilots?</strong>
+A: No. Minimum 4 required for identifying patterns. Nielsen’s 5-user rule suggests 5 find ~85% of issues.</p>
+<p><strong>Q: What if participants don’t give consent?</strong>
+A: Don’t proceed with the pilot. Find alternative participants. Consent is non-negotiable.</p>
+<p><strong>Q: Can I fabricate data if I couldn’t complete pilots?</strong>
 A: Absolutely not. Academic integrity violation. Contact module lead immediately if you have issues.</p>
 <p><strong>Q: What if my metrics.csv is empty?</strong>
-A: Your instrumentation isn't working. Debug in Week 9 Lab 1 before running pilots.</p>
+A: Your instrumentation isn’t working. Debug in Week 9 Lab 1 before running pilots.</p>
 <p><strong>Q: Do I need to test with screen readers?</strong>
 A: Not mandatory (keyboard-only is acceptable) but highly recommended for stronger evidence.</p>
 <p><strong>Q: What if my findings show the interface has no problems?</strong>
-A: Unlikely with n=4-5. Revisit pilot notes for subtle issues (confusion, hesitation, errors). Be honest if genuinely no issues, but check you're looking closely enough.</p>
+A: Unlikely with n=4-5. Revisit pilot notes for subtle issues (confusion, hesitation, errors). Be honest if genuinely no issues, but check you’re looking closely enough.</p>
 <p><strong>Q: How do I link to Week 6 needs-finding?</strong>
 A: In <code>01-evaluation-plan.md</code>, section 2 prompts you to reference 2-3 job stories and explain how they shaped your task selection.</p>
 <p><strong>Q: Can I submit early?</strong>
@@ -599,7 +599,7 @@ A: Yes, but you miss Week 9 Lab 2 time for data verification. Use the full 2 wee
 <h3 id="professional-presentation-20"><a class="header" href="#professional-presentation-20">Professional Presentation (20%)</a></h3>
 <ul>
 <li>Clear, well-structured documentation</li>
-<li>Honest reporting (doesn't hide limitations or unexpected results)</li>
+<li>Honest reporting (doesn’t hide limitations or unexpected results)</li>
 <li>Complete submission (all 6 files + evidence)</li>
 <li>UK spelling and grammar</li>
 <li>Proper Markdown formatting</li>
