--- a/assessment/task2.html
+++ b/assessment/task2.html
@@ -186,7 +186,7 @@
 <hr />
 <h2 id="overview"><a class="header" href="#overview">Overview</a></h2>
 <p>Implement <strong>inclusive redesign</strong> based on Task 1 findings, verify improvements through regression testing and re-pilots (n=2 minimum), and analyse societal impacts of design decisions.</p>
-<p><strong>What you'll learn</strong>:</p>
+<p><strong>What you’ll learn</strong>:</p>
 <ul>
 <li>How to prioritise accessibility fixes using data</li>
 <li>How to verify WCAG 2.2 AA compliance through regression testing</li>
@@ -194,7 +194,7 @@
 <li>How to analyse systemic barriers and societal impacts of design</li>
 </ul>
 <hr />
-<h2 id="what-were-assessing"><a class="header" href="#what-were-assessing">What We're Assessing</a></h2>
+<h2 id="what-were-assessing"><a class="header" href="#what-were-assessing">What We’re Assessing</a></h2>
 <h3 id="-what-this-task-does-assess"><a class="header" href="#-what-this-task-does-assess">✅ What This Task DOES Assess</a></h3>
 <p><strong>Accessibility knowledge</strong> (LO4, LO9):</p>
 <ul>
@@ -213,22 +213,22 @@
 <p><strong>Critical analysis</strong> (LO3, LO10):</p>
 <ul>
 <li>Can you analyse systemic barriers (who is excluded, how, why)?</li>
-<li>Can you critique societal impacts (beyond "helps disabled people")?</li>
+<li>Can you critique societal impacts (beyond “helps disabled people”)?</li>
 <li>Can you consider ethical implications (privacy, autonomy, dignity)?</li>
 <li>Can you distinguish universal design from accommodation?</li>
 </ul>
 <p><strong>Professional practice</strong> (LO12, LO13):</p>
 <ul>
 <li>Do you maintain evidence chains (Task 1 finding → fix → verification)?</li>
-<li>Do you report honestly (if metrics don't improve, explain why)?</li>
+<li>Do you report honestly (if metrics don’t improve, explain why)?</li>
 <li>Can you integrate accessibility into engineering workflow (regression testing)?</li>
 </ul>
 <h3 id="-what-this-task-does-not-assess"><a class="header" href="#-what-this-task-does-not-assess">❌ What This Task Does NOT Assess</a></h3>
-<p><strong>Code elegance</strong>: We're not grading software engineering quality. We assess <strong>accessibility compliance</strong> and <strong>evidence-based fixing</strong>, not elegant Kotlin.</p>
-<p><strong>Feature scope</strong>: We don't care if you fix 1 issue or 10. We care about <strong>high-inclusion impact fixes</strong> (WCAG violations, SR/keyboard barriers) done thoroughly.</p>
+<p><strong>Code elegance</strong>: We’re not grading software engineering quality. We assess <strong>accessibility compliance</strong> and <strong>evidence-based fixing</strong>, not elegant Kotlin.</p>
+<p><strong>Feature scope</strong>: We don’t care if you fix 1 issue or 10. We care about <strong>high-inclusion impact fixes</strong> (WCAG violations, SR/keyboard barriers) done thoroughly.</p>
 <p><strong>Writing quality</strong>: <strong>Code diffs, regression checklists, and metrics tables</strong> matter more than prose. Societal impact needs critical analysis (not flowery language).</p>
-<p><strong>Creative solutions</strong>: This isn't about innovation. It's about <strong>applying WCAG standards rigorously</strong> and <strong>verifying compliance methodically</strong>.</p>
-<p><strong>Perfect metrics</strong>: We don't expect 100% improvement. We expect <strong>honest before/after comparison</strong> and <strong>analysis of results</strong> (even if modest).</p>
+<p><strong>Creative solutions</strong>: This isn’t about innovation. It’s about <strong>applying WCAG standards rigorously</strong> and <strong>verifying compliance methodically</strong>.</p>
+<p><strong>Perfect metrics</strong>: We don’t expect 100% improvement. We expect <strong>honest before/after comparison</strong> and <strong>analysis of results</strong> (even if modest).</p>
 <hr />
 <h2 id="timeline"><a class="header" href="#timeline">Timeline</a></h2>
 <div class="table-wrapper"><table><thead><tr><th>When</th><th>Activity</th><th>Deliverable</th></tr></thead><tbody>
@@ -256,7 +256,7 @@
 </div>
 <p>See <a href="../references/learning-outcomes.html">Learning Outcomes Reference</a> for full definitions.</p>
 <hr />
-<h2 id="what-youre-redesigning"><a class="header" href="#what-youre-redesigning">What You're Redesigning</a></h2>
+<h2 id="what-youre-redesigning"><a class="header" href="#what-youre-redesigning">What You’re Redesigning</a></h2>
 <p><strong>Top 2-3 issues identified in Task 1</strong>, prioritised using <strong>(Impact + Inclusion) – Effort</strong> (see <a href="#prioritisation-formula-explained">Prioritisation Formula</a> below):</p>
 <p><strong>Focus on</strong>:</p>
 <ul>
@@ -292,7 +292,7 @@
 <p><strong>Template</strong>: <a href="../../wk10/gradescope/task2/01-redesign-brief.html">wk10/gradescope/task2/01-redesign-brief.md</a></p>
 <p><strong>Example problem statement</strong>:</p>
 <blockquote>
-<p>"Validation errors on the task edit form (T2) are not announced to screen readers, causing a 33% error rate and blocking task completion for SR users (WCAG 4.1.3 violation). Week 9 pilots (n=5) showed 2/5 participants using keyboard-only mode could not detect or correct blank submission errors."</p>
+<p>“Validation errors on the task edit form (T2) are not announced to screen readers, causing a 33% error rate and blocking task completion for SR users (WCAG 4.1.3 violation). Week 9 pilots (n=5) showed 2/5 participants using keyboard-only mode could not detect or correct blank submission errors.”</p>
 </blockquote>
 <p><strong>Societal impact section (LO10)</strong>:</p>
 <ul>
@@ -509,13 +509,13 @@ T2_edit,on,4,5,0.80,1400,234,2,0.33
 <ul>
 <li>✅ <strong>Feasibility</strong>: Limited time in Week 10 (7-8 hours total for implementation + testing + documentation)</li>
 <li>✅ <strong>Focused scope</strong>: Only re-testing tasks affected by fixes (not all tasks)</li>
-<li>✅ <strong>Verification goal</strong>: Checking fix didn't break things, not discovering new issues</li>
+<li>✅ <strong>Verification goal</strong>: Checking fix didn’t break things, not discovering new issues</li>
 <li>✅ <strong>Qualitative priority</strong>: 2 diverse variants (e.g., 1 keyboard-only, 1 screen reader) more valuable than 4 standard variants</li>
 </ul>
 <p><strong>What n=2 must demonstrate</strong>:</p>
 <ol>
 <li><strong>Fix effectiveness</strong>: Measurable improvement on target metric (completion rate, error rate, time, SR accessibility)</li>
-<li><strong>No regressions</strong>: Regression checklist (30 checks) confirms fix didn't break other features</li>
+<li><strong>No regressions</strong>: Regression checklist (30 checks) confirms fix didn’t break other features</li>
 <li><strong>Variant diversity</strong>: 2 participants using different access methods (e.g., P6 keyboard-only, P7 screen reader)</li>
 </ol>
 <p><strong>Example</strong>:</p>
@@ -561,7 +561,7 @@ T2_edit,on,4,5,0.80,1400,234,2,0.33
 <div class="table-wrapper"><table><thead><tr><th>Score</th><th>Description</th><th>Example</th></tr></thead><tbody>
 <tr><td><strong>5</strong></td><td>Architectural rewrite (&gt;8 hours)</td><td>Rebuild entire routing system for no-JS parity</td></tr>
 <tr><td><strong>4</strong></td><td>Major refactor (4-8 hours)</td><td>Refactor all forms to use ARIA-describedby pattern</td></tr>
-<tr><td><strong>3</strong></td><td>Moderate work (2-4 hours)</td><td>Add role="alert" to 5 error messages + test with NVDA</td></tr>
+<tr><td><strong>3</strong></td><td>Moderate work (2-4 hours)</td><td>Add role=“alert” to 5 error messages + test with NVDA</td></tr>
 <tr><td><strong>2</strong></td><td>Minor fix (30min-2 hours)</td><td>Update CSS for focus indicators (outline: 3px solid)</td></tr>
 <tr><td><strong>1</strong></td><td>Trivial (&lt;30min)</td><td>Add alt text to decorative image</td></tr>
 </tbody></table>
@@ -602,13 +602,13 @@ T2_edit,on,4,5,0.80,1400,234,2,0.33
 <p><strong>Task 2 plan</strong>: Fix A1 + B2 (total ~4 hours), skip C3 (not feasible in 2 weeks).</p>
 <hr />
 <h3 id="tips-for-using-the-formula"><a class="header" href="#tips-for-using-the-formula">Tips for Using the Formula</a></h3>
-<p>✅ <strong>Be honest</strong>: Don't inflate Impact/Inclusion to justify pet features
+<p>✅ <strong>Be honest</strong>: Don’t inflate Impact/Inclusion to justify pet features
 ✅ <strong>Evidence-based</strong>: Use Task 1 data (error rates, pilot quotes, WCAG refs) to score
 ✅ <strong>Focus on inclusion</strong>: High Inclusion score = prioritise (module theme)
 ✅ <strong>Document</strong>: Show calculation in <code>01-redesign-brief.md</code> for transparency</p>
 <hr />
 <h2 id="example-regression-checklist-excerpt"><a class="header" href="#example-regression-checklist-excerpt">Example Regression Checklist Excerpt</a></h2>
-<p><strong>What "complete with PASS/FAIL + notes" looks like</strong> (from <code>02-a11y-regression-checklist.csv</code>):</p>
+<p><strong>What “complete with PASS/FAIL + notes” looks like</strong> (from <code>02-a11y-regression-checklist.csv</code>):</p>
 <pre><code class="language-csv">check,item,pass,notes
 Keyboard,All interactive elements reachable via Tab,PASS,Verified all buttons/links/inputs reachable
 Keyboard,Tab order logical (matches visual flow),PASS,Tested with Tab key only; no jumps
@@ -643,26 +643,26 @@ Links,Links distinguishable (not color-only),PASS,Links underlined + color
 </code></pre>
 <p><strong>Key observations</strong>:</p>
 <ul>
-<li>✅ Every check has <strong>PASS</strong> or <strong>FAIL</strong> (no blanks, no "N/A")</li>
+<li>✅ Every check has <strong>PASS</strong> or <strong>FAIL</strong> (no blanks, no “N/A”)</li>
 <li>✅ Notes explain <strong>what was tested</strong> or <strong>how compliance was verified</strong></li>
-<li>✅ Specific details given (e.g., "7.1:1" contrast, "NVDA" screen reader)</li>
-<li>✅ Task 2 fixes referenced where relevant ("Added in Task 2 fix")</li>
+<li>✅ Specific details given (e.g., “7.1:1” contrast, “NVDA” screen reader)</li>
+<li>✅ Task 2 fixes referenced where relevant (“Added in Task 2 fix”)</li>
 </ul>
 <p><strong>Common mistakes</strong>:</p>
 <ul>
 <li>❌ Leaving notes blank (write what you tested!)</li>
-<li>❌ Using "N/A" instead of PASS/FAIL (all checks apply to all apps)</li>
-<li>❌ Vague notes: "Focus works" → ❌ Better: "Blue 3px outline on all :focus (WCAG 2.4.7)"</li>
+<li>❌ Using “N/A” instead of PASS/FAIL (all checks apply to all apps)</li>
+<li>❌ Vague notes: “Focus works” → ❌ Better: “Blue 3px outline on all :focus (WCAG 2.4.7)”</li>
 </ul>
 <hr />
 <h2 id="common-mistakes-to-avoid"><a class="header" href="#common-mistakes-to-avoid">Common Mistakes to Avoid</a></h2>
-<p>❌ <strong>No before/after data</strong>: Can't prove improvement without metrics comparison</p>
-<p>❌ <strong>Regression not tested</strong>: Fix broke something else but wasn't caught</p>
-<p>❌ <strong>Superficial societal impact</strong>: "Helps disabled people" without systemic analysis</p>
+<p>❌ <strong>No before/after data</strong>: Can’t prove improvement without metrics comparison</p>
+<p>❌ <strong>Regression not tested</strong>: Fix broke something else but wasn’t caught</p>
+<p>❌ <strong>Superficial societal impact</strong>: “Helps disabled people” without systemic analysis</p>
 <p>❌ <strong>WCAG violations remain</strong>: Claimed compliance but axe DevTools still shows errors</p>
 <p>❌ <strong>No-JS parity broken</strong>: Fix works with JS but traditional path fails</p>
 <p>❌ <strong>Not grounded in Task 1</strong>: Fixes random issues instead of Task 1 findings</p>
-<p>❌ <strong>Incomplete regression checklist</strong>: Blanks or "N/A" instead of PASS/FAIL</p>
+<p>❌ <strong>Incomplete regression checklist</strong>: Blanks or “N/A” instead of PASS/FAIL</p>
 <p>❌ <strong>No code diffs</strong>: Claims code changed but no snippets shown</p>
 <hr />
 <h2 id="tips-for-success"><a class="header" href="#tips-for-success">Tips for Success</a></h2>
@@ -683,7 +683,7 @@ Links,Links distinguishable (not color-only),PASS,Links underlined + color
 <p>✅ <strong>Scrub screenshots</strong>: Crop/blur PII before adding to <code>05-evidence/</code></p>
 <p>✅ <strong>Link everything</strong>: Every fix → Task 1 finding (file + section reference)</p>
 <p>✅ <strong>Complete checklists</strong>: No blanks—every check needs PASS/FAIL + note</p>
-<p>✅ <strong>Honest reporting</strong>: If metrics didn't improve, analyse why (LO12 professionalism)</p>
+<p>✅ <strong>Honest reporting</strong>: If metrics didn’t improve, analyse why (LO12 professionalism)</p>
 <p>✅ <strong>Incorporate crit feedback</strong>: Week 11 Lab 1 suggestions in final docs</p>
 <hr />
 <h2 id="tools-analysekt-script"><a class="header" href="#tools-analysekt-script">Tools: Analyse.kt Script</a></h2>
@@ -725,13 +725,13 @@ T2_edit,off,3,3,1.00,1650,180,0,0.00
 <li>✅ <strong>Yes, if needed</strong>: Can adapt for different CSV format (e.g., if you added custom columns in Task 1)</li>
 <li><strong>Ask staff first</strong>: If you think script has a bug or need to modify, contact module lead</li>
 </ul>
-<p><strong>What if script doesn't work?</strong></p>
+<p><strong>What if script doesn’t work?</strong></p>
 <ol>
 <li>Check <code>04-results.csv</code> format matches expected schema (see Task 1 deliverable 4)</li>
 <li>Verify file path is correct (<code>wk09/lab-wk9/submission/task1-draft/04-results.csv</code>)</li>
 <li>Check for data issues (missing session IDs, invalid timestamps, blank task codes)</li>
 <li>Consult Week 10 Lab 1 troubleshooting section</li>
-<li>Contact module staff if still blocked (don't fabricate <code>pre/analysis.csv</code> manually)</li>
+<li>Contact module staff if still blocked (don’t fabricate <code>pre/analysis.csv</code> manually)</li>
 </ol>
 <p><strong>Alternative (if script unavailable)</strong>:
 If script not provided by Week 10 Lab 1, manually calculate:</p>
@@ -777,14 +777,14 @@ A: Document honestly. Analyse why (wrong fix? small n? need more iteration?). Sh
 <p><strong>Q: Do I need to re-pilot all tasks?</strong>
 A: No. Re-pilot tasks affected by your fixes (e.g., if you fixed T2 edit errors, re-pilot T2).</p>
 <p><strong>Q: Can I use Week 10 Lab 1 Analyse.kt for before data?</strong>
-A: Yes, that's the recommended approach. It generates <code>analysis.csv</code> from Task 1 <code>metrics.csv</code>.</p>
+A: Yes, that’s the recommended approach. It generates <code>analysis.csv</code> from Task 1 <code>metrics.csv</code>.</p>
 <p><strong>Q: What if regression testing finds new issues?</strong>
-A: Fix them before re-pilots. That's why regression testing exists—catch regressions early.</p>
+A: Fix them before re-pilots. That’s why regression testing exists—catch regressions early.</p>
 <p><strong>Q: How detailed should societal impact analysis be?</strong>
-A: 300-500 words. Beyond "helps disabled people"—analyse systemic barriers, exclusion patterns, long-term implications. See template examples.</p>
+A: 300-500 words. Beyond “helps disabled people”—analyse systemic barriers, exclusion patterns, long-term implications. See template examples.</p>
 <p><strong>Q: Can I fix issues not in Task 1?</strong>
 A: Not recommended. Assessment requires evidence chain (Task 1 finding → fix → verification). New issues lack baseline data.</p>
-<p><strong>Q: What if I can't recruit 2 re-pilots?</strong>
+<p><strong>Q: What if I can’t recruit 2 re-pilots?</strong>
 A: Minimum 2 required. Start recruiting early (Week 10). Use lab sessions to find peers.</p>
 <hr />
 <h2 id="marking-criteria"><a class="header" href="#marking-criteria">Marking Criteria</a></h2>
@@ -820,7 +820,7 @@ A: Minimum 2 required. Start recruiting early (Week 10). Use lab sessions to fin
 <h3 id="professional-presentation-10"><a class="header" href="#professional-presentation-10">Professional Presentation (10%)</a></h3>
 <ul>
 <li>Clear, well-structured documentation</li>
-<li>Honest reporting (doesn't hide limitations or unexpected results)</li>
+<li>Honest reporting (doesn’t hide limitations or unexpected results)</li>
 <li>Complete submission (6 files + evidence + metrics)</li>
 <li>UK spelling and grammar</li>
 <li>Proper Markdown formatting</li>
