--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 <img src="https://img.shields.io/badge/Year-2025%2F26-orange" alt="Academic Year" /></p>
 <hr />
 <h2 id="welcome"><a class="header" href="#welcome">Welcome</a></h2>
-<p>This is the <strong>HCI (Human-Computer Interaction)</strong> component of <strong>COMP2850</strong>, running from <strong>Week 6 to Week 11</strong>. You'll build <strong>inclusive web interfaces</strong> using <strong>HTML as your UI layer</strong> (no React/Vue/Angular). We follow the <strong><a href="https://hypermedia.systems/">hypermedia systems</a></strong> approach—dynamic, accessible UIs built with server-rendered HTML and progressive enhancement.</p>
+<p>This is the <strong>HCI (Human-Computer Interaction)</strong> component of <strong>COMP2850</strong>, running from <strong>Week 6 to Week 11</strong>. You’ll build <strong>inclusive web interfaces</strong> using <strong>HTML as your UI layer</strong> (no React/Vue/Angular). We follow the <strong><a href="https://hypermedia.systems/">hypermedia systems</a></strong> approach—dynamic, accessible UIs built with server-rendered HTML and progressive enhancement.</p>
 <p><strong>Core approaches</strong>:</p>
 <ul>
 <li><strong><a href="references/htmx-patterns.html">Hypermedia-driven interfaces (HTMX)</a></strong> - Dynamic HTML UIs without JavaScript frameworks</li>
@@ -245,8 +245,8 @@
 <hr />
 <h2 id="key-principles"><a class="header" href="#key-principles">Key Principles</a></h2>
 <h3 id="1-people-centred-language"><a class="header" href="#1-people-centred-language">1. People-Centred Language</a></h3>
-<p>We use "<strong>person navigating with a screen reader</strong>" (not "blind user"), "<strong>person navigating by keyboard</strong>" (not
-"disabled user"), or "participant" in evaluation contexts.<br />
+<p>We use “<strong>person navigating with a screen reader</strong>” (not “blind user”), “<strong>person navigating by keyboard</strong>” (not
+“disabled user”), or “participant” in evaluation contexts.<br />
 <strong>Why this matters:</strong><br />
 Disability arises from barriers in the environment—inaccessible design, missing features,
 exclusionary assumptions—not from individual impairment.<br />
@@ -290,7 +290,7 @@ People-first language centres the person, not a diagnostic label.</p>
 <hr />
 <h2 id="support"><a class="header" href="#support">Support</a></h2>
 <ul>
-<li><strong>Lab sessions</strong>: Staff on hand for questions (2-hour taught labs &amp; open lab sessions with TA's available)</li>
+<li><strong>Lab sessions</strong>: Staff on hand for questions (2-hour taught labs &amp; open lab sessions with TA’s available)</li>
 <li><strong>Office hours</strong>: Contact teaching team for availability</li>
 <li><strong>Discussion board</strong>: MS Teams COMP2850 forum for all module peer/staff questions</li>
 <li><strong>Personal issues</strong>: Contact via Teams DM or email module staff directly</li>
