--- a/references/accessibility-testing.html
+++ b/references/accessibility-testing.html
@@ -189,7 +189,7 @@
 <li><strong><a href="glossary.html#no-js-parity">No-JS parity</a></strong> so core functionality remains available when JavaScript fails or is unavailable</li>
 <li><strong>Inclusive design</strong> informed by people-centred language and real customer needs</li>
 </ul>
-<p>Unlike "accessibility as an audit" (checking compliance at the end), accessibility-first means every design decision—from route structure to <a href="glossary.html#aria">ARIA</a> attributes to colour contrast—is evaluated for inclusion before implementation. This approach reduces technical debt, improves usability for all users, and ensures legal compliance with the Equality Act 2010 and UK GDPR.</p>
+<p>Unlike “accessibility as an audit” (checking compliance at the end), accessibility-first means every design decision—from route structure to <a href="glossary.html#aria">ARIA</a> attributes to colour contrast—is evaluated for inclusion before implementation. This approach reduces technical debt, improves usability for all users, and ensures legal compliance with the Equality Act 2010 and UK GDPR.</p>
 <h2 id="testing-checklist"><a class="header" href="#testing-checklist">Testing Checklist</a></h2>
 <p>Use this mini-check at the end of every lab to capture evidence quickly. Print it or keep it in your repo (<code>testing/checklist.md</code>).</p>
 <div class="table-wrapper"><table><thead><tr><th>Area</th><th>Steps</th><th>Evidence to capture</th></tr></thead><tbody>
