--- a/references/htmx-patterns.html
+++ b/references/htmx-patterns.html
@@ -194,7 +194,7 @@
 <h2 id="how-it-works"><a class="header" href="#how-it-works">How it works</a></h2>
 <ol>
 <li><strong>Human interaction</strong> - Click a button, submit a form, type in a search box</li>
-<li><strong>HTMX sends AJAX request</strong> - Adds <code>HX-Request: true</code> <a href="glossary.html#request-headers">header</a> so server knows it's AJAX</li>
+<li><strong>HTMX sends AJAX request</strong> - Adds <code>HX-Request: true</code> <a href="glossary.html#request-headers">header</a> so server knows it’s AJAX</li>
 <li><strong>Server responds with HTML</strong> - Returns a <a href="glossary.html#fragment">fragment</a> (e.g., <code>&lt;li&gt;New item&lt;/li&gt;</code>) not a full page</li>
 <li><strong>HTMX swaps the fragment</strong> - Updates the target element (append, replace, etc.)</li>
 <li><strong>Screen readers announce</strong> - <a href="glossary.html#aria-live-region">ARIA live regions</a> announce changes automatically</li>
