--- a/references/learning-outcomes.html
+++ b/references/learning-outcomes.html
@@ -194,9 +194,9 @@
 </div>
 <p><strong>Key distinction</strong>:</p>
 <ul>
-<li><strong>Aims</strong> are broad intentions ("enable students to...")</li>
-<li><strong>Outcomes</strong> are measurable achievements ("students will be able to...")</li>
-<li><strong>Objectives</strong> are specific activities ("implement a consent form", "run 4 pilots")</li>
+<li><strong>Aims</strong> are broad intentions (“enable students to…”)</li>
+<li><strong>Outcomes</strong> are measurable achievements (“students will be able to…”)</li>
+<li><strong>Objectives</strong> are specific activities (“implement a consent form”, “run 4 pilots”)</li>
 </ul>
 <hr />
 <h2 id="module-wide-learning-outcomes-comp2850"><a class="header" href="#module-wide-learning-outcomes-comp2850">Module-Wide Learning Outcomes (COMP2850)</a></h2>
@@ -347,20 +347,20 @@ enables you to do. They are <strong>not</strong> the same as Learning Outcomes (
 <p><strong>Characteristics</strong>:</p>
 <ul>
 <li>High-level, conceptual</li>
-<li>Focus on "enabling" or "equipping" students</li>
+<li>Focus on “enabling” or “equipping” students</li>
 <li>Not directly assessed (but outcomes derived from aims are assessed)</li>
 </ul>
-<p><strong>Example</strong>: "This module aims to enable students to design accessible web interfaces."</p>
+<p><strong>Example</strong>: “This module aims to enable students to design accessible web interfaces.”</p>
 <h3 id="learning-outcomes-los"><a class="header" href="#learning-outcomes-los">Learning Outcomes (LOs)</a></h3>
 <p><strong>Definition</strong>: Specific, measurable competencies that students will demonstrate by the end of the module.</p>
 <p><strong>Characteristics</strong>:</p>
 <ul>
 <li>Use action verbs (apply, analyse, design, evaluate)</li>
-<li>Aligned to Bloom's Taxonomy</li>
+<li>Aligned to Bloom’s Taxonomy</li>
 <li>Directly assessed</li>
 <li>Mapped to accreditation standards (ACM, BCS)</li>
 </ul>
-<p><strong>Example</strong>: "LO4: Evaluate software interfaces for accessibility concerns using WCAG 2.2 AA standards."</p>
+<p><strong>Example</strong>: “LO4: Evaluate software interfaces for accessibility concerns using WCAG 2.2 AA standards.”</p>
 <h3 id="lab-objectives"><a class="header" href="#lab-objectives">Lab Objectives</a></h3>
 <p><strong>Definition</strong>: Session-specific tasks and activities that contribute to achieving Learning Outcomes.</p>
 <p><strong>Characteristics</strong>:</p>
@@ -369,7 +369,7 @@ enables you to do. They are <strong>not</strong> the same as Learning Outcomes (
 <li>Time-bound (this lab session)</li>
 <li>Contribute to one or more LOs</li>
 </ul>
-<p><strong>Example</strong>: "Run an axe DevTools audit and document 5+ WCAG violations" (contributes to LO4).</p>
+<p><strong>Example</strong>: “Run an axe DevTools audit and document 5+ WCAG violations” (contributes to LO4).</p>
 <hr />
 <h2 id="acm-cs2023-mapping"><a class="header" href="#acm-cs2023-mapping">ACM CS2023 Mapping</a></h2>
 <p>The 13 HCI Learning Outcomes map to the following ACM Computer Science 2023 curriculum standards:</p>
@@ -446,7 +446,7 @@ enables you to do. They are <strong>not</strong> the same as Learning Outcomes (
 </ul>
 <h3 id="student-support"><a class="header" href="#student-support">Student Support</a></h3>
 <ul>
-<li>Link to this reference in feedback ("see LO4 for accessibility criteria")</li>
+<li>Link to this reference in feedback (“see LO4 for accessibility criteria”)</li>
 <li>Use self-assessment checklist in tutorials</li>
 <li>Explain aims vs outcomes vs objectives in Week 6</li>
 </ul>
