--- a/references/pebble-cheatsheet.html
+++ b/references/pebble-cheatsheet.html
@@ -481,7 +481,7 @@ mapOf("task" to task.toPebbleContext())
 </code></pre>
 <hr />
 <h2 id="11-pebble-vs-other-template-engines"><a class="header" href="#11-pebble-vs-other-template-engines">11. Pebble vs Other Template Engines</a></h2>
-<p>If you've used other template engines, here's a quick comparison:</p>
+<p>If you’ve used other template engines, here’s a quick comparison:</p>
 <div class="table-wrapper"><table><thead><tr><th>Feature</th><th>Pebble</th><th>Thymeleaf</th><th>FreeMarker</th></tr></thead><tbody>
 <tr><td>Variables</td><td><code>{{ var }}</code></td><td><code>${var}</code></td><td><code>${var}</code></td></tr>
 <tr><td>If statement</td><td><code>{% if %}</code></td><td><code>th:if</code></td><td><code>&lt;#if&gt;</code></td></tr>
