--- a/references/process-visuals.html
+++ b/references/process-visuals.html
@@ -221,7 +221,7 @@
   Routes --&gt; HTMX[HTMX fragment responses]
   Routes --&gt; PRG[Full-page PRG responses]
 </pre>
-<p><strong>What it shows:</strong> relationships between the Pebble layout, task partials, and Ktor routes used in Week 8's partial refactor.</p>
+<p><strong>What it shows:</strong> relationships between the Pebble layout, task partials, and Ktor routes used in Week 8’s partial refactor.</p>
 <h2 id="crit-loop"><a class="header" href="#crit-loop">Crit Loop</a></h2>
 <pre class="mermaid">graph TD
   Present[Evidence-led demo]
@@ -241,6 +241,9 @@
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
+                            <a rel="next prefetch" href="../resources/code-resources.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -252,6 +255,9 @@
                         <i class="fa fa-angle-left"></i>
                     </a>
 
+                    <a rel="next prefetch" href="../resources/code-resources.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
