--- a/references/server-first.html
+++ b/references/server-first.html
@@ -185,7 +185,7 @@
 </blockquote>
 <p><strong>New to these terms?</strong> See the <strong><a href="glossary.html">Glossary</a></strong> for full definitions.</p>
 <hr />
-<h2 id="why-serverfirst"><a class="header" href="#why-serverfirst">Why "server‑first"?</a></h2>
+<h2 id="why-serverfirst"><a class="header" href="#why-serverfirst">Why “server‑first”?</a></h2>
 <ul>
 <li><strong>Reliability</strong>: No dependency on client frameworks to show a page or submit a form.</li>
 <li><strong>Simplicity</strong>: Routing, validation, and business logic live on the server (<a href="glossary.html#ktor">Ktor</a>). You avoid duplicating logic in the browser.</li>
@@ -442,7 +442,7 @@
 <p>Use <code>if (call.isHtmx()) renderPartial(...) else renderPage(...)</code> to keep controllers tidy.</p>
 <hr />
 <h3 id="final-thought"><a class="header" href="#final-thought">Final thought</a></h3>
-<p><strong>Server‑first ≠ anti‑JavaScript.</strong> It's about choosing HTML as the reliable baseline, then layering interaction where it genuinely improves the experience. You'll build features faster, with fewer bugs, and everyone—including people navigating with assistive tech—benefits.</p>
+<p><strong>Server‑first ≠ anti‑JavaScript.</strong> It’s about choosing HTML as the reliable baseline, then layering interaction where it genuinely improves the experience. You’ll build features faster, with fewer bugs, and everyone—including people navigating with assistive tech—benefits.</p>
 
                     </main>
 
