--- a/resources/code-resources.html
+++ b/resources/code-resources.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Code Resources - COMP2850 • Human-Computer Interaction</title>
+        <title>Starter Repository - COMP2850 • Human-Computer Interaction</title>
 
 
         <!-- Custom HTML head -->
@@ -179,19 +179,60 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="code-resources"><a class="header" href="#code-resources">Code Resources</a></h1>
+                        <h1 id="starter-code-repository"><a class="header" href="#starter-code-repository">Starter Code Repository</a></h1>
+<blockquote>
+<p>Starter repository URL: https://github.com/julianbrooks/comp2850-hci-starter</p>
+</blockquote>
+<p>Use this reference to navigate between the mdBook documentation and the runnable starter repository. All paths are relative to the repo root (<code>starter-repo/</code>).</p>
+<h2 id="week-6"><a class="header" href="#week-6">Week 6</a></h2>
+<ul>
+<li>Starter baseline: <code>starter-repo/</code>
+<ul>
+<li>Lab pack: <code>starter-repo/wk06/</code></li>
+<li>Server code scaffold: <code>starter-repo/src/main/</code></li>
+</ul>
+</li>
+</ul>
+<h2 id="week-7"><a class="header" href="#week-7">Week 7</a></h2>
+<ul>
+<li>Lab pack: <code>starter-repo/wk07/</code></li>
+<li>Note: Inline edit implementation is built during this week’s labs</li>
+</ul>
+<h2 id="week-8"><a class="header" href="#week-8">Week 8</a></h2>
+<ul>
+<li>Lab pack: <code>starter-repo/wk08/</code></li>
+<li>Note: Pagination and filtering utilities are built during this week’s labs</li>
+</ul>
+<h2 id="week-9"><a class="header" href="#week-9">Week 9</a></h2>
+<ul>
+<li>Lab pack: <code>starter-repo/wk09/</code></li>
+<li>Note: Instrumentation utilities (<code>utils/Logger.kt</code>, <code>utils/Timing.kt</code>) are built during this week’s labs</li>
+</ul>
+<h2 id="week-10"><a class="header" href="#week-10">Week 10</a></h2>
+<ul>
+<li>Lab pack: <code>starter-repo/wk10/</code></li>
+<li>Analysis scaffolds and templates provided</li>
+</ul>
+<h2 id="week-11"><a class="header" href="#week-11">Week 11</a></h2>
+<ul>
+<li>Lab pack: <code>starter-repo/wk11/</code></li>
+<li>Wrap-up templates and critique materials provided</li>
+</ul>
+<h2 id="quick-tips"><a class="header" href="#quick-tips">Quick Tips</a></h2>
+<ul>
+<li>Use <code>git status</code> inside <code>starter-repo/</code> to check your progress</li>
+<li>Check the README inside each <code>wk0X/</code> directory for specific instructions</li>
+<li>Each week’s lab pack includes templates, scaffolds, and deliverable checklists</li>
+</ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../wk11/wk11-lab2-wrapup-portfolio.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../references/process-visuals.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../assessment/overview.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <i class="fa fa-angle-right"></i>
-                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -199,13 +240,10 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../wk11/wk11-lab2-wrapup-portfolio.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../references/process-visuals.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../assessment/overview.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <i class="fa fa-angle-right"></i>
-                    </a>
             </nav>
 
         </div>
