--- a/references/example-accessible-inline-edit.html
+++ b/references/example-accessible-inline-edit.html
@@ -252,7 +252,7 @@ Original implementation failed accessibility checks:</p>
 <h2 id="evidence-to-capture-for-task-1"><a class="header" href="#evidence-to-capture-for-task-1">Evidence to capture (for Task 1)</a></h2>
 <ul>
 <li>Screenshot of before/after (with annotations on label / status)</li>
-<li>Screen reader transcript (NVDA) confirming: “Updated "Submit report".”</li>
+<li>Screen reader transcript (NVDA) confirming: “Updated “Submit report”.”</li>
 <li>Backlog entry referencing WCAG 1.3.1 and 4.1.3</li>
 </ul>
 <p>Use this pattern as a blueprint: the key is tying markup + server response + evidence together.</p>
